--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
                 <a href="gallery.html">Photo Gallery</a> <!-- New link to the gallery -->
                 <h2>Planning Tools</h2>
                 <a href="https://www.windy.com" target="_blank">Windy.com</a>
-                <a href="https://earth.google.com/web/" target="_blank">Google Earth</a>
+                <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
             </div>
         </div>
         <div class="social-media-links">
