--- a/introduction.html
+++ b/introduction.html
@@ -25,7 +25,6 @@
                     <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
                     <a href="about.html">About the Author</a>
-                    <a href="science.html">Science</a>
                     <a href="support.html">SUPport</a>
                 </nav>
             </div>
@@ -52,6 +51,7 @@
         </div>
     </div>
 </body>
+   <!-- Bottom Banner -->
 <div class="banner">
     <div class="hamburger-menu" onclick="toggleMenu()">
         &#9776; <!-- Hamburger Icon -->
@@ -60,7 +60,10 @@
         <span class="close-btn" onclick="toggleMenu()">&times;</span> <!-- Close Button -->
        
         <div class="links-container">
-            <a href="gallery.html">Photo Gallery</a> <!-- New link to the gallery -->
+            <h2>Open Oceanography</h2>
+            <a href="science.html">Main Page</a>
+            <h2>Photo Gallery</h2>
+             <a href="gallery.html">Photo Map</a> <!-- New link to the gallery -->
              <h2>Planning Tools</h2>
             <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Windy.com</a>
             <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
@@ -74,8 +77,8 @@
             <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
             </a>
 
-            <a href="https://twitter.com/drewarlenb" target="_blank" aria-label="Twitter">
-            <i class="fab fa-twitter"></i>
+            <a href="https://substack.com/@drewburrier" target="_blank" aria-label="Substack">
+            <i class="fas fa-newspaper"></i>  <!-- Replace with an appropriate Substack icon if needed -->
             </a>
             <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
@@ -89,6 +92,10 @@
 
         </div>
 </div>
+
+
+
+
 
 <script src="strava_api.js"></script>
 </html>
