--- a/landing.html
+++ b/landing.html
@@ -72,6 +72,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKS4VZRVKZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZKS4VZRVKZ');
+</script>
 <body>
     <div class="container">
         <!-- My Oceanic Odyssey Section -->
