--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ document.getElementById('emailForm').addEventListener('submit', function(event) 
         <span class="close-btn" onclick="toggleMenu()">&times;</span> <!-- Close Button -->
        
         <div class="links-container">
+            <h2>Landing Page</h2>
+            <a href="landing.html">Main Page</a>
             <h2>Open Oceanography</h2>
             <a href="science.html">Main Page</a>
             <h2>Photo Gallery</h2>
