--- a/science.html
+++ b/science.html
@@ -107,33 +107,7 @@
                 <div class="carousel-container">
                     <!-- Week 1: Introduction to Oceanography -->
                     <div class="carousel-item">
-                        <img src="photos/support_1.jpeg" alt="Introduction to Oceanography">
-                        <h3>Introduction to Oceanography</h3>
-                        <div class="lesson">
-                            <h4>What is Oceanography?</h4>
-                            <div class="link-container">
-                                <a href="#" class="link-button">Medium</a>
-                                <a href="#" class="link-button">YouTube</a>
-                            </div>
-                        </div>
-                        <div class="lesson">
-                            <h4>Branches of Oceanography</h4>
-                            <div class="link-container">
-                                <a href="#" class="link-button">Medium</a>
-                                <a href="#" class="link-button">YouTube</a>
-                            </div>
-                        </div>
-                        <div class="lesson">
-                            <h4>Why Study the Ocean?</h4>
-                            <div class="link-container">
-                                <a href="#" class="link-button">Medium</a>
-                                <a href="#" class="link-button">YouTube</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Week 2: Introduction to Open Oceanography -->
-                    <div class="carousel-item">
-                        <img src="photos/sea_surface_temperature.jpg" alt="Introduction to Open Oceanography">
+                        <img src="photos/support_1.jpeg" alt="Introduction to Open Oceanography">
                         <h3>Introduction to Open Oceanography</h3>
                         <div class="lesson">
                             <h4>What is Open Oceanography?</h4>
@@ -157,9 +131,36 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <!-- Week 2: Introduction to Open Oceanography -->
+                    <div class="carousel-item">
+                        <img src="photos/sea_surface_temperature.jpg" alt="Introduction to Oceanography">
+                        <h3>Introduction to Oceanography</h3>
+                        <div class="lesson">
+                            <h4>What is Oceanography?</h4>
+                            <div class="link-container">
+                                <a href="#" class="link-button">Medium</a>
+                                <a href="#" class="link-button">YouTube</a>
+                            </div>
+                        </div>
+                        <div class="lesson">
+                            <h4>Branches of Oceanography</h4>
+                            <div class="link-container">
+                                <a href="#" class="link-button">Medium</a>
+                                <a href="#" class="link-button">YouTube</a>
+                            </div>
+                        </div>
+                        <div class="lesson">
+                            <h4>Why Study the Ocean?</h4>
+                            <div class="link-container">
+                                <a href="#" class="link-button">Medium</a>
+                                <a href="#" class="link-button">YouTube</a>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Week 3: Ocean Data 101 -->
                     <div class="carousel-item">
-                        <img src="photos/ocean_data.jpg" alt="Ocean Data 101">
+                        <img src="photos/IMG_4903.jpg" alt="Ocean Data 101">
                         <h3>Ocean Data 101</h3>
                         <div class="lesson">
                             <h4>Where Does Ocean Data Come From?</h4>
@@ -187,11 +188,51 @@
             </div>
         </div>
     </div>
-    <script>
-        function toggleMenu() {
-            const menu = document.getElementById('planning-tools');
-            menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
-        }
-    </script>
+  <!-- Bottom Banner -->
+<div class="banner">
+    <div class="hamburger-menu" onclick="toggleMenu()">
+        &#9776; <!-- Hamburger Icon -->
+    </div>
+    <div id="planning-tools" class="planning-tools">
+        <span class="close-btn" onclick="toggleMenu()">&times;</span> <!-- Close Button -->
+       
+        <div class="links-container">
+            <h2>Landing Page</h2>
+            <a href="landing.html">Main Page</a>
+            <h2>Photo Gallery</h2>
+             <a href="gallery.html">Photo Map</a> <!-- New link to the gallery -->
+             <h2>Planning Tools</h2>
+            <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Windy.com</a>
+            <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
+        </div>
+    </div>
+     <div class="social-media-links">
+            <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://medium.com/my-oceanic-odyssey" target="_blank" aria-label="Medium">
+            <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
+            </a>
+
+            <a href="https://substack.com/@drewburrier" target="_blank" aria-label="Substack">
+            <i class="fas fa-newspaper"></i>  <!-- Replace with an appropriate Substack icon if needed -->
+            </a>
+            <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <!--  <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
+                <i class="fab fa-strava"></i>
+            </a> -->
+             <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
+                <i class="fab fa-spotify"></i>
+            </a>
+
+        </div>
+</div>
+
+
+    <script src="strava_api.js"></script>
+</body>
+</html>
 </body>
 </html>
