open oceanography syllabus
1-4

--- a/science.html
+++ b/science.html
@@ -105,7 +105,7 @@
             <div class="science-section">
                 <h2>Explore Topics</h2>
                 <div class="carousel-container">
-                    <!-- Week 1: Introduction to Oceanography -->
+                    <!-- Introduction to Open Oceanography -->
                     <div class="carousel-item">
                         <img src="photos/support_1.jpeg" alt="Introduction to Open Oceanography">
                         <h3>Introduction to Open Oceanography</h3>
@@ -132,61 +132,85 @@
                         </div>
                     </div>
                     
-                    <!-- Week 2: Introduction to Open Oceanography -->
+                    <!-- Week 1: Plate tectonics and the shape of ocean basins -->
                     <div class="carousel-item">
-                        <img src="photos/sea_surface_temperature.jpg" alt="Introduction to Oceanography">
-                        <h3>Introduction to Oceanography</h3>
+                        <img src="photos/Plate_techtonics.jpg" alt="Introduction to Oceanography">
+                        <h3>Plate tectonics and the shape of ocean basins</h3>
                         <div class="lesson">
-                            <h4>What is Oceanography?</h4>
+                            <h4>?</h4>
                             <div class="link-container">
                                 <a href="#" class="link-button">Medium</a>
                                 <a href="#" class="link-button">YouTube</a>
                             </div>
                         </div>
                         <div class="lesson">
-                            <h4>Branches of Oceanography</h4>
+                            <h4>?</h4>
                             <div class="link-container">
                                 <a href="#" class="link-button">Medium</a>
                                 <a href="#" class="link-button">YouTube</a>
                             </div>
                         </div>
                         <div class="lesson">
-                            <h4>Why Study the Ocean?</h4>
+                            <h4>?</h4>
                             <div class="link-container">
                                 <a href="#" class="link-button">Medium</a>
                                 <a href="#" class="link-button">YouTube</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Week 3: Ocean Data 101 -->
+                    <!-- Week 3: The Physical Properties of Seawater -->
                     <div class="carousel-item">
-                        <img src="photos/IMG_4903.jpg" alt="Ocean Data 101">
-                        <h3>Ocean Data 101</h3>
+                        <img src="photos/water_masses.jpg" alt="Ocean Data 101">
+                        <h3>The Physical Properties of Seawater</h3>
                         <div class="lesson">
-                            <h4>Where Does Ocean Data Come From?</h4>
+                            <h4>Temperature and salinity distributions</h4>
                             <div class="link-container">
                                 <a href="#" class="link-button">Medium</a>
                                 <a href="#" class="link-button">YouTube</a>
                             </div>
                         </div>
                         <div class="lesson">
-                            <h4>Collecting Data at Sea</h4>
+                            <h4>Seawater density and stratification</h4>
                             <div class="link-container">
                                 <a href="#" class="link-button">Medium</a>
                                 <a href="#" class="link-button">YouTube</a>
                             </div>
                         </div>
                         <div class="lesson">
-                            <h4>Making Data Meaningful</h4>
+                            <h4>Water Masses</h4>
+                            <div class="link-container">
+                                <a href="#" class="link-button">Medium</a>
+                                <a href="#" class="link-button">YouTube</a>
+
+                                </div>
+                            </div>
+                        </div>
+                                        <!-- Week 4: Air/sea interaction and atmospheric circulation -->
+                    <div class="carousel-item">
+                        <img src="photos/air_sea_interactions.jpg" alt="Ocean Data 101">
+                        <h3>The Physical Properties of Seawater</h3>
+                        <div class="lesson">
+                            <h4>Temperature and salinity distributions</h4>
+                            <div class="link-container">
+                                <a href="#" class="link-button">Medium</a>
+                                <a href="#" class="link-button">YouTube</a>
+                            </div>
+                        </div>
+                        <div class="lesson">
+                            <h4>Seawater density and stratification</h4>
+                            <div class="link-container">
+                                <a href="#" class="link-button">Medium</a>
+                                <a href="#" class="link-button">YouTube</a>
+                            </div>
+                        </div>
+                        <div class="lesson">
+                            <h4>Water Masses</h4>
                             <div class="link-container">
                                 <a href="#" class="link-button">Medium</a>
                                 <a href="#" class="link-button">YouTube</a>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
     </div>
   <!-- Bottom Banner -->
 <div class="banner">
