--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ document.getElementById("popupEmailForm").addEventListener("submit", function(ev
        
         <div class="links-container">
             <h2>Work With Me</h2>
-            <a href="freelance.html">Let's Connect</a>
+            <a href="freelance.html">Let's Connect!</a>
             <h2>Landing Page</h2>
             <a href="landing.html">Main Page</a>
             <h2>Open Oceanography</h2>
