--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ document.getElementById("popupEmailForm").addEventListener("submit", function(ev
         </div>
 </div>
 
-
+    <script src="coastline_oahu_linestring.js"></script>
     <script src="strava_api.js"></script>
 </body>
 </html>
